# wamodren

./: .gitignore  CMakeLists.txt  hello-world.spv
cmake/: get_package_deps.cmake
data/shaders/: gradient.slang  hello-world.slang  single_triangle.slang
source/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
